Z-indexing fix

--- a/index.css
+++ b/index.css
@@ -28,9 +28,6 @@ table {
     :root {
         --px: 0.8px;
     }
-    main {
-        padding-top: 84px !important;
-    }
 }
 @media screen and (max-width: 450px) {
     :root {
@@ -180,8 +177,6 @@ header {
         z-index: 1;
         opacity: 0.97;
     }
-    #nav-page { top: calc(100 * var(--px)); }
-    main { padding-top: 100px; }
 }
 @media screen and (max-width: 750px) {
     #header-title {
@@ -228,9 +223,6 @@ header {
     #header-hamburger {
         margin-right: 10px;
     }
-    #nav-page { top: 76px; }
-    main { padding-top: 76px !important; }
-
 }
 @media screen and (max-width: 900px) { #nav-page-mobile li { aspect-ratio: 1.9; } }
 @media screen and (max-width: 850px) { #nav-page-mobile li { aspect-ratio: 1.75; } }
@@ -267,8 +259,6 @@ header {
     #nav-page-mobile {
         grid-template-columns: 1fr 1fr 1fr !important;
     }
-    #nav-page { top: 68px; }
-    main { padding-top: 68px !important; }
 }
 @media screen and (max-width: 335px) {
     #header-hamburger {
@@ -286,6 +276,15 @@ header {
 /*******************************
 Navigation
 *******************************/
+/* Nav (including dropdown menus) should be above main content */
+main {
+    position: relative;
+    z-index: 1;
+}
+#nav-page, header {
+    position: relative;
+    z-index: 2;
+}
 #nav-page {
     background-color: #e2cbdb;
     filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.2));
@@ -646,7 +645,6 @@ article .section-default:last-child, article .section-wide:last-child {
     margin-top: -50px;
 }
 .section-default-bg {
-    z-index: -1; /* Must be below the nav-repertoire dropdown menu */
     width: var(--section-default-width);
     padding: 50px 0px;
     margin-top: 50px;
